# polygraphvault

./: .env.example  .env.vps.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.vps.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
docker/postgres/: init-databases.sh
docs/: concept.md  e2e-report.md  security.md
docs/superpowers/plans/: 2026-07-12-syncer-improvements.md
scripts/: prepare-persistent-e2e.ps1
syncer/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
syncer/app/: __init__.py  config.py  db.py  filters.py  main.py  models.py  pages.py  polygraph.py  sync.py  webdav.py
syncer/tests/: test_api.py  test_clients.py  test_filters.py  test_sync.py
